syntax = "proto3";
package virtengine.encryption.v1;

import "gogoproto/gogo.proto";
import "virtengine/encryption/v1/types.proto";

option go_package = "github.com/virtengine/virtengine/sdk/go/node/encryption/v1";

// GenesisState defines the encryption module's genesis state
message GenesisState {
  // Params are the module parameters
  Params params = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag) = "params",
    (gogoproto.moretags) = "yaml:\"params\""
  ];

  // RecipientKeys are the initial registered recipient keys
  repeated RecipientKeyRecord recipient_keys = 2 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag) = "recipient_keys",
    (gogoproto.moretags) = "yaml:\"recipient_keys\""
  ];
}
